# aws-containers

./: .gitignore  .npmrc  ADDITIONAL_PERFORMANCE_OPTIMIZATIONS.md  AGENTIC_CODING_RULES.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CODE_OF_CONDUCT.md  FIREFOX_HANG_FIX.md  FIREFOX_SUBMISSION_CHECKLIST.md  INSTALL.md  LICENSE  MIGRATION.md  NOSSO_FIX_SUMMARY.md  PERFORMANCE_EFFICIENCY_REPORT.md  PERFORMANCE_TESTS_SUMMARY.md  PHASE_1_COMPLETION_SUMMARY.md  PHASE_2_COMPLETION_SUMMARY.md  PHASE_3_COMPLETION_SUMMARY.md  PHASE_4_COMPLETION_SUMMARY.md  PYTHON_312_FEATURES_SUMMARY.md  QUICKSTART.md  README.md  READY_FOR_TESTING.md  SECURITY.md  SECURITY_SUMMARY.md  SEQUENCE_DIAGRAM.md  SUBMISSION_READY.md  SUPPORT.md  SYSTEMATIC_FIXES_TODO.md  XPI_PACKAGING_GUIDE.md  build-native-host.sh  commitlint.config.js  demo-config  demo-credentials  install.sh  jest.config.js  jest.setup.ts  package-lock.json  package.json  playwright.config.ts  (+15 more)
.github/: CODEOWNERS  (+3 more)
api-server/: .gitignore  API_SERVER_README.md  MIGRATION_GUIDE.md  README.md  REFACTORING_SUMMARY.md  pyproject.toml  pytest.ini  requirements.txt
api-server/src/: __init__.py
api-server/src/aws_profile_bridge/: __init__.py  __main__.py  api_server.py  app.py  file_parsers.py  profile_metadata.py
api-server/tests/: test_app.py  test_authenticator.py  test_aws_profile_bridge.py  test_bridge.py  test_console_url.py  test_credentials.py  test_extension_validator.py  test_logging_middleware.py  test_metadata.py  test_parsers.py  test_rate_limiter.py  test_sso.py  test_token_manager.py  test_url_cache.py  test_validators.py
(+315 files in other folders)
